# chip8monad

./: README.md  chip8monad.cabal  stack.yaml
.stack-work/: stack.sqlite3
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Cpu.hs  Main.hs
