cabal-version:      2.4
name:               chip8monad
version:            0.1.0.0
synopsis:           CHIP-8 emulator
license:            MIT
author:             Rohan Deshpande
build-type:         Simple

executable chip8monad
    main-is:          Main.hs
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

    other-modules:
        Cpu

    build-depends:
        base       >= 4.7 && < 5,
        gloss      >= 1.13,
        ilist      >= 0.4,
        mtl        >= 2.2,
        random     >= 1.2,
        bytestring >= 0.11
